--- a/markup/components/boost/boost.styl
+++ b/markup/components/boost/boost.styl
@@ -37,7 +37,7 @@
         background-color mainColor
         text-align center
         border-radius 50%
-        transition(all)
+        transition all 0.25s ease-in-out
 
         svg
             height 100%
