--- a/markup/components/contacts-card/contacts-card.styl
+++ b/markup/components/contacts-card/contacts-card.styl
@@ -61,12 +61,8 @@
             margin-right: 21px
 
     &__icon
+        fill darkGreyColor
+        transition(all)
 
-        &_fb
-            fill: darkGreyColor
-
-        &_tw
-            fill: darkGreyColor
-
-        &_link
-            stroke: darkGreyColor
+        &:hover
+            fill mainColor
