--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -40,7 +40,7 @@
     &__icon
         display: inline-block
         vertical-align middle
-        transition(all)
+        transition all .25s ease-in-out
 
         &_fill
             fill: darkGreyColor
