--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -85,6 +85,10 @@
                 border: 1px solid borderColor
                 margin-left: -1px
                 margin-top: -1px
+                transition(all)
+
+                &:hover
+                    color: mainColor
 
     &__label
         margin: 20px auto
