--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -68,6 +68,7 @@
         width: 316px
         padding-bottom: 57px
         background-color: #fff
+        z-index 2;
 
         +below(1023px)
             width: 100%
