--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -14,6 +14,9 @@
     /*iziAnimation()*/
     box-sizing border-box
 
+    b
+        transition(all)
+
     &_inline
         display: inline-block
         vertical-align: middle
@@ -60,6 +63,9 @@
     &_izi
         border-width 0
         iziAnimation()
+
+        svg
+            transition: all .25s ease-in-out;
 
     &_border
         &_standart
