--- a/markup/components/info-control/info-control.styl
+++ b/markup/components/info-control/info-control.styl
@@ -25,7 +25,6 @@
         padding: 0 20px
         background-color: #fff
         border: 1px solid borderColor
-        transition(all)
         iziAnimation(darkGreyColor)
 
         &:hover
@@ -41,7 +40,7 @@
         font-size 16px
         font-weight 400
         ellipsis(100%)
-        transition(color)
+        transition(all)
         margin-right: 20px
         text-transform: uppercase
         letter-spacing 1px
@@ -68,5 +67,10 @@
                     border-color: transparent
                     box-shadow 0 20px 50px rgba(29, 29, 29, 0.02)
 
+                    &:hover
+                        & ^[0]__label
+                            color: #fff
+
                     & ^[0]__label
                         color: darkGreyColor
+
