--- a/markup/components/list/list.styl
+++ b/markup/components/list/list.styl
@@ -82,7 +82,7 @@
         font-family fontMain
         font-size 16px
         font-weight 400
-        transition(color)
+        transition(all)
         ellipsis(100%)
 
     &__arrow
