--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -83,6 +83,7 @@
 
     &__caret-icon
         fill: #fff
+        transition(all)
 
     &__button
         display: flex
@@ -96,6 +97,11 @@
         transform: translate3d(0, 0, 0)
         transition: transform .5s ease-in-out
         pointer-events: all
+
+        &:hover
+
+            & .profile-photo-popup__caret-icon
+                fill mainColor
 
 
         &_prev
