--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -9,9 +9,11 @@
 .select-city-popup
     align-self: flex-start
     width: 100%
+    height 100%
     background-color: darkGreyColor
     padding-top: 20px
     padding-bottom: 20px
+    overflow auto;
 
     &__select
         display: none
