--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -12,9 +12,11 @@
 
     .heading
         margin-top: 39px
+        margin-bottom 39px
 
         +below(768px)
             margin-top: 32px
+            margin-bottom 32px;
             padding-left: 31px
             padding-right: 31px
 
@@ -56,9 +58,11 @@
         flex-shrink: 0
         padding-top: 1px
         overflow: hidden
+        margin: -1px
 
         +below(900px)
             width: 100%
+            margin 0
             border-top: 1px solid borderColor
 
         .message
@@ -67,6 +71,7 @@
             box-sizing: border-box
             border-right: 1px solid borderColor
             cursor: pointer
+            transition(all)
 
             +below(900px)
                 border-right: 0
@@ -75,12 +80,13 @@
             &:not(:last-child)
                 border-bottom 1px solid borderColor
 
-            &.active
+            &.active, &:hover
                 background-color #fff
+                box-shadow 0 20px 50px 0 rgba(29, 29, 29, 0.02), 0 0 0 1px #fff
                 border-color transparent
 
                 +below(900px)
-                    background-color: transparent
+                    background-color: #fff
                     box-shadow: none
                     border-bottom-color borderColor
     &__right
@@ -156,7 +162,7 @@
         justify-content: center
         width: 100%
         height: 100%
-        margin-top: 11px
+        padding: 72px 0;
 
         &-picture
             display: flex
