--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -45,7 +45,7 @@
         text-transform uppercase
         border-radius: 50%
         margin-top: 20px
-        transition(all)
+        transition all 0.25s ease-in-out
 
     &__heading
         color #fff
