--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -122,14 +122,13 @@ izi animation
 iziAnimation(bg = mainColor, color = #fff)
     &
         position: relative
-        z-index: 0
+        z-index: 1
         overflow: hidden
-        transition: all cubic-bezier(0.7,0,0.9,1)
+        transition all 0.25s ease-in-out
 
     &:hover, &.active
         color: color
         border-color transparent
-        background-color: bg
 
         svg
             fill: color
@@ -148,7 +147,8 @@ iziAnimation(bg = mainColor, color = #fff)
         display: block
         width: 13%
         height: 50%
-        transition: transform .25s cubic-bezier(0.7,0,0.9,1)
+        transition: transform 0.25s, opacity 0.25s;
+        transition-timing-function: ease-in-out;
         border-radius: 50%
         background-color: bg
         transform-origin: 100% 50%
