--- a/markup/components/payment-method/payment-method.styl
+++ b/markup/components/payment-method/payment-method.styl
@@ -3,6 +3,11 @@
     text-decoration: none
     cursor pointer
 
+    &:hover
+
+        & ^[0]__heading
+            color: mainColor
+
     &__control
         display: none
 
