--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -843,7 +843,7 @@ mixin user-fill-profile-8
                 +grid
                     +col(12)
                         +accordion
-                            +accordion-item('Select Country and City')
+                            +accordion-item('Select Country and City').accordion__item_topborder.accordion__item_no-lr-paddings
                                 +grid
                                     +col(6)
                                         +field
@@ -858,7 +858,7 @@ mixin user-fill-profile-8
                                             +field-label Address
                                             +field-input Los Angeles
 
-            .user-fill-profile__section
+            .user-fill-profile__section.user-fill-profile__section_small-top-space
                 +grid
                     +col(6)
                         +field
