--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -63,6 +63,10 @@
             padding-top: 35px
             border-top: 1px solid borderColor
 
+        &_small-top-space:not(:first-child)
+            margin-top 0
+            padding-top 10px
+
     &__add-btn
         width: 100%
         height: 60px
