--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -35,6 +35,8 @@
 
     &__profile-card
         width: 316px
+        transform: translate3d(0, 0, 0);
+        will-change: position, transform;
 
         +below(1023px)
             position: static !important
@@ -69,6 +71,7 @@
         padding-bottom: 57px
         background-color: #fff
         z-index 2;
+        will-change: min-height;
 
         +below(1023px)
             width: 100%
