--- a/markup/components/boost-account/boost-account.styl
+++ b/markup/components/boost-account/boost-account.styl
@@ -83,6 +83,7 @@
         justify-content: space-between
         align-items: center
         padding: 0 40px
+        transition(all)
 
         +below(920px)
             padding: 40px
@@ -97,6 +98,15 @@
             font-size 16px
             line-height 1.375
             color rgba(darkGreyColor, .59)
+            transition(all)
+
+        &:hover
+            background-color mainColor
+            border-color transparent
+
+            span
+                color: #fff
+
 
     &__action
         width: 100%
