--- a/markup/components/rating-interactive/rating-interactive.styl
+++ b/markup/components/rating-interactive/rating-interactive.styl
@@ -72,6 +72,11 @@
                 background-color: darkGreyColor
                 border-color: #262728
 
+        &:hover ~ ^[0]__star,
+        &:hover
+            background-color: darkGreyColor
+            border-color: #262728
+
         &:hover ~ ^[0]__star ^[0]__icon,
         &:hover ^[0]__icon,
         &.active ~ ^[0]__star ^[0]__icon,
