--- a/markup/components/reviews/reviews.styl
+++ b/markup/components/reviews/reviews.styl
@@ -158,6 +158,10 @@
             +below(1024px)
                 margin-top: 25px
 
+    &__content
+        display: none
+        width 100%
+
 .review
     display: block
 
