--- a/markup/components/header/header-map.pug
+++ b/markup/components/header/header-map.pug
@@ -16,6 +16,7 @@ mixin header(dark, isGuest, activeMenu, isUser)
     - var getActive = function(candidate) { return activeMenu === candidate ? 'active' : ''};
     - var avatar = isUser ? 'jackson.png' : 'navbar.png'
     - var name = isUser ? 'Michael' : 'Megan'
+
     +b.HEADER.header&attributes(attributes)
         // DESKTOP NAVBAR
         +e.NAV.navbar._desktop
@@ -68,7 +69,7 @@ mixin header(dark, isGuest, activeMenu, isUser)
                             option(value='Rating') Rating
                             option(value='Price') Price
                 +navbar-item.show-fixed
-                    +button(href='model-map.html')._color_white._bg_darkGrey._uppercase View on map
+                    +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.active View on list
                 +navbar-item._dropdown._credits
                     +navbar-link-dropdown(href='#')
                         +navbar-heading Credits
