--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -21,7 +21,7 @@
         padding: 10px
         border: 2px solid transparent
         border-radius: 50%
-        display: none
+        display: block
 
         .close
             display: none
