--- a/markup/components/model-map/model-map.styl
+++ b/markup/components/model-map/model-map.styl
@@ -1,7 +1,7 @@
 .model-map
-    display: none
+    display: block
     width: 100%
-    height: 100%
+    height: 100vh
 
     .map__block > div
         background-color: darkGreyColor !important
