--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -114,7 +114,7 @@
 
         &:first-of-type {
             .map__content & {
-                margin-top: 95px
+                margin-top: 152px
             }
         }
 
@@ -178,6 +178,7 @@
                     width: 100%
 
                 &:not(:last-child)
+                    margin-left: 0
                     margin-right: 0px
                     margin-bottom: 21px
 
