--- a/markup/components/header/header-map.pug
+++ b/markup/components/header/header-map.pug
@@ -69,7 +69,7 @@ mixin header(dark, isGuest, activeMenu, isUser, isAgencies)
                             option(value='Rating') Rating
                             option(value='Price') Price
                 +navbar-item.show-fixed
-                    +button(href=isAgencies ? 'model-map-agencies.html' : 'model-map.html')._color_white._bg_darkGrey._uppercase.active View on list
+                    +button(href=isAgencies ? 'agency-list.html' : 'model-list.html')._color_white._bg_darkGrey._uppercase.active View on list
                 +navbar-item._dropdown._credits
                     +navbar-link-dropdown(href='#')
                         +navbar-heading Credits
@@ -170,7 +170,7 @@ mixin header(dark, isGuest, activeMenu, isUser, isAgencies)
                     +navbar-link(href='#' data-popup-id='#filter-extended' data-action='toggle').js-toggle-popup
                         != pugHelpers.Icon.call(locals, {iconName: 'filter-button', className: 'navbar__icon_filter', iconWidth: '19', iconHeight: '12'})
                 +navbar-item
-                    +navbar-link(href=isAgencies ? 'model-map-agencies.html' : 'model-map.html')._mob-map
+                    +navbar-link(href=isAgencies ? 'agency-list.html' : 'model-list.html')._mob-map
                         != pugHelpers.Icon.call(locals, {iconName: 'location', className: 'navbar__icon_location', iconWidth: '18', iconHeight: '21'})
                         != pugHelpers.Icon.call(locals, {iconName: 'list-view', className: 'navbar__icon_list-view', iconWidth: '22', iconHeight: '14'})
 
