--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -177,6 +177,9 @@
                     margin-right: 0
                     width: 100%
 
+                &:last-child
+                    margin-left: 0
+
                 &:not(:last-child)
                     margin-left: 0
                     margin-right: 0px
