--- a/markup/components/agency-list/agency-list.pug
+++ b/markup/components/agency-list/agency-list.pug
@@ -10,7 +10,7 @@ mixin agency-list()
         +container
             +e.header
                 +heading(2156) Agency’s
-                +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
+                +button(href='model-map-agencies.html')._color_white._bg_darkGrey._uppercase View on map
             +grid
                 - for (var i = 0; i < 6; i++)
                     +col(6)
