--- a/markup/pages/model-map-agencies.pug
+++ b/markup/pages/model-map-agencies.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/model-map/model-map
 
 block header
-    +header(true, null, 'all escorts', true)._map.no-shadow
+    +header(true, null, 'all escorts', null, true)._map.no-shadow
 
 block content
     +model-map
