fix scroll into page

--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -10,6 +10,10 @@
     overflow-y: auto
     overflow-x: hidden
 
+    &_profile-popup
+        position: absolute !important
+        box-sizing: content-box
+
     &:not(.popup_no_transform)
         transform: translate3d(0, 0, 0)
 
