--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -48,6 +48,10 @@
             top: 0
             transform: translate3d(0, 0, 0)
 
+        &.attached
+            position: absolute
+            bottom: 0
+
     &__main
         display: flex
 
