--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -47,6 +47,7 @@
             position: fixed
             top: 0
             transform: translate3d(0, 0, 0)
+            pointer-events none
 
         &.attached
             position: absolute
