--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -230,7 +230,7 @@
                 height: 100%
                 z-index: 1
                 background-color: rgba(darkGreyColor, .7)
-                transition(background-color)
+                m-transition(background-color)
 
         &_bottom
             align-items: center
