--- a/markup/components/boost-account/boost-account.styl
+++ b/markup/components/boost-account/boost-account.styl
@@ -83,7 +83,7 @@
         justify-content: space-between
         align-items: center
         padding: 0 40px
-        transition(all)
+        m-transition(all)
 
         +below(920px)
             padding: 40px
@@ -98,7 +98,7 @@
             font-size 16px
             line-height 1.375
             color rgba(darkGreyColor, .59)
-            transition(all)
+            m-transition(all)
 
         &:hover
             background-color mainColor
