--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -86,7 +86,7 @@
                 border: 1px solid borderColor
                 margin-left: -1px
                 margin-top: -1px
-                transition(all)
+                m-transition(all)
 
                 &:hover
                     color: mainColor
