--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -28,7 +28,7 @@
 
     &__slide
         display: none
-        transition opacity .5s ease
+        transition: opacity .5s ease
 
         &.active
             display: block
