--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -88,7 +88,7 @@
         opacity: 0
         pointer-events none
         transition-delay .25s
-        transition(opacity)
+        m-transition(opacity)
 
         &-wrapper
             position: absolute
@@ -100,7 +100,7 @@
             max-height: 240px
             pointer-events none
             opacity: 0
-            transition(opacity)
+            m-transition(opacity)
             z-index: 100
 
             &_has_dropdown
@@ -116,7 +116,7 @@
         pointer-events: none
         height: 100%
         background-color: darkGreyColor
-        transition(opacity)
+        m-transition(opacity)
         width: 258px
         overflow-y: auto
         flex-shrink: 0
@@ -138,7 +138,7 @@
         letter-spacing: initial
         background-color darkGreyColor
         cursor: pointer
-        transition(background-color, color)
+        m-transition(background-color, color)
         font-size: 16px
 
         svg
@@ -146,7 +146,7 @@
             width: 12px
             height: 9px
             fill: #fff
-            transition(opacity)
+            m-transition(opacity)
             margin-left: 24px
 
         &:hover
