--- a/markup/components/agency-info/agency-info.styl
+++ b/markup/components/agency-info/agency-info.styl
@@ -47,7 +47,7 @@
             margin-left: 6px
             text-decoration: none
             font-weight: 700
-            transition(color)
+            m-transition(color)
 
             &:hover
                 color: darkGreyColor
