--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -23,7 +23,7 @@
         font-size: 16px
         color: darkGreyColor
         text-decoration: none
-        transition(color)
+        m-transition(color)
 
         &_md
             font-size: 16px
