--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -36,7 +36,7 @@
         margin-top: 23px
         width 100%
         overflow hidden
-        transition(all)
+        m-transition(all)
         will-change height
 
         +below(768px)
@@ -79,7 +79,7 @@
         font-weight 400
         line-height 1.38
         pointer-events all
-        transition(all)
+        m-transition(all)
 
     &__content
         display: flex
@@ -111,7 +111,7 @@
             box-sizing: border-box
             border-right: 1px solid borderColor
             cursor: pointer
-            transition(all)
+            m-transition(all)
 
             +below(900px)
                 border-right: 0
