--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -129,6 +129,7 @@ iziAnimation(bg = mainColor, color = #fff)
     &:hover, &.active
         color: color
         border-color transparent
+        background-color mainColor
 
         svg
             fill: color
