--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -62,8 +62,8 @@
     &_additional
 
         & ^[0]__hide-additional
-            opacity: 0
-            pointer-events: none
+            // opacity: 0
+            // pointer-events: none
 
             +below(768px)
                 display none
@@ -117,7 +117,7 @@
         width: 60px
         height: 60px
         position: relative
-        
+
         .icon-button__icon
             position: absolute
             left: 0
