--- a/markup/components/boost-preview/boost-preview.pug
+++ b/markup/components/boost-preview/boost-preview.pug
@@ -34,4 +34,5 @@ mixin boost-preview-interactive(credits, money, badge, selected)
         +e.buttons
             +e.btn
                 span Select
-                != pugHelpers.Icon.call(locals, {iconName: 'ok', iconWidth: '15', iconHeight: '11.25'})
+                span Selected
+                //- != pugHelpers.Icon.call(locals, {iconName: 'ok', iconWidth: '15', iconHeight: '11.25'})
